FB-10 | Service | Adding Integration test for create uom